netlink: Request dump from active channel

--- a/meson.build
+++ b/meson.build
@@ -8,17 +8,27 @@ mnl = dependency('libmnl')
 
 schemegen = find_program('tll-schemegen', dirs: [tll.get_pkgconfig_variable('prefix') / 'python'])
 
-scheme_header = custom_target(
+scheme_headers = [
+custom_target(
     'netlink.h',
     output : 'netlink.h',
     input : 'src/netlink.yaml',
     command : [schemegen, '--format=cpp-binder', '--namespace=netlink_scheme', '@INPUT@', '-o', '@OUTPUT@'],
     install : true,
     install_dir : 'include/tll'
+),
+custom_target(
+    'netlink-control.h',
+    output : 'netlink-control.h',
+    input : 'src/control.yaml',
+    command : [schemegen, '--format=cpp-binder', '--namespace=netlink_control_scheme', '@INPUT@', '-o', '@OUTPUT@'],
+    install : true,
+    install_dir : 'include/tll'
 )
+]
 
 lib = shared_library('tll-netlink',
-	['src/channel.cc', 'src/monitor.cc', scheme_header],
+	['src/channel.cc', 'src/monitor.cc'] + scheme_headers,
 	include_directories : include,
 	dependencies : [fmt, mnl, tll],
 	install : true,
