--- a/src/netlink.yaml
+++ b/src/netlink.yaml
@@ -11,19 +11,39 @@
     - {name: IPv6, type: byte16}
     - {name: Interface, type: byte16, options.type: string}
 
+- name: Bond
+  fields:
+    - {name: pmap, type: uint16, options.pmap: yes}
+    - {name: mode, type: uint8, options.type: enum, enum: {RR: 0, ActiveBackup: 1, XOR: 2, Broadcast: 3, M8023AD: 4, TLB: 5, ALB: 6}}
+    - {name: active_slave, type: uint32, options.optional: yes}
+    - {name: ad_select, type: uint32}
+    - {name: ad_partner_mac, type: byte6, options.optional: yes}
+
+- name: BondSlave
+  fields:
+    - {name: state, type: uint8, options.type: enum, enum: {Active: 0, Backup: 1}}
+    - {name: mii_status, type: uint8, options.type: enum, enum: {Up: 0, Fail: 1, Down: 2, Back: 3}}
+
 - name: Link
   id: 10
   bits:
     Flags: {type: uint32, options.type: bits, bits: [Up, Broadcast, Debug, Loopback, PointToPoint, NoTrailers, Running, NoArp, Promisc, AllMulti, Master, Slave, Multicast, PortSel, AutoMedia, Dynamic]}
+  enums:
+    Type: {type: uint16, enum: {Ether: 1, Loopback: 772, Tunnel: 768, Infiniband: 32, Other: 0xfffd, None: 0xfffe, Void: 0xffff}}
+  unions:
+    LinkInfo: {union: [{name: none, type: uint8}, {name: bond, type: Bond}, {name: bond_slave, type: BondSlave}]}
   fields:
     - {name: pmap, type: uint16, options.pmap: yes}
     - {name: action, type: Action}
+    - {name: type, type: Type}
+    - {name: type_raw, type: uint16}
     - {name: index, type: int32}
     - {name: name, type: Interface}
     #- {name: flags, type: uint32}
     - {name: up, type: uint8}
     - {name: flags, type: Flags}
     - {name: lladdr, type: byte6, options.optional: yes}
+    - {name: linkinfo, type: LinkInfo}
 
 - name: Route4
   id: 20
