--- a/src/control.yaml
+++ b/src/control.yaml
@@ -2,3 +2,5 @@
   id: 10
   fields:
     - {name: request, type: uint8, options.type: bits, bits: [Link, Addr, Route, Neigh]}
+- name: EndOfData
+  id: 20
