--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Pavel Shramov <shramov@mexmat.net>
 Build-Depends: debhelper (>= 12), meson (>= 0.53), cmake, pkg-config,
-    libfmt-dev (>= 5.3), libmnl-dev, libtll-dev, python3-tll,
+    libfmt-dev (>= 5.3), libmnl-dev, libtll-dev, python3-tll, python3-pytest
 Standards-Version: 4.6.1
 Vcs-Git: https://github.com/shramov/tll-netlink
 
